<resources>
    <string name="app_name">Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="wait">Wait…</string>
    <string name="pref_user_name">pref_username</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_client_code">pref_client_code</string>
    <string name="client_code">Client code</string>
    <string name="image_url">https://cdn-sb.erply.com/images/%1$s/%2$s?width=140&amp;height=160</string>
    <string name="user_is_empty">User is empty</string>
    <string name="pass_is_empty">Password is empty</string>
    <string name="clientcode_is_empty">Client code is empty</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="check_connection">Check connection</string>
    <string name="logout">Logout</string>
    <string name="loading">loading…</string>
    <string name="myBookmarks">Product name</string>
    <string name="search_hint">Product name, code, or UPC </string>
    <string name="nothing_searched">Nothing searched</string>
    <string name="todo">TODO</string>
</resources>